# reactivegas

./: .ClienteGTKLib.hs.swp  .fourmolu.yaml  .gitignore  .hlint.yaml.bak  :w  Accredito.hs  AggiornaStato.hs  Anagrafe.hs  Applicazione.hs  Aspetti.hs  Beni.hs  Bugs.hs  CSV.hs  Chiavi.hs  Client.hs  ClientLib.hs  Cliente.hs  ClienteGTK.hs  ClienteGTKLib.hs  Componenti.hs  Controllo.hs  Core.hs  Costruzione.hs  CreaPatchDiGruppo.hs  Crypto.hs  Eventi.hs  Fields.hs  Impegno.hs  Inizio.hs  Integrity.hs  JSON.hs  Lib.hs  Lib0.hs  Lib1.hs  Logger.hs  MIME.hs  Mails.hs  MakePatch.hs  NuovaPatch.hs  NuoveChiavi.hs  (+50 more)
.github/workflows/: build-artifacts.yaml  ci.yaml  deploy-docs.yaml
Applicazioni/: .Applicazione.hs.swp  Aggiornamento.hs  Amministratore.hs  Applicazione.hs  ClientLib.hs  ClienteGTK.hs  ClienteGTKLib.hs  FileSystem.hs  Movimenti.hs  Persistenza.hs  Reactivegas.hs  Report.hs  Server.hs  Sessione.hs  reactivegas.glade
Applicazioni/Database/: Acquisti.hs  GPatch.hs  Movimenti.hs
Console/: console.hs
Core/: Aggiornamento.hs  Amministration.hs  Amministrazione.hs  Applicazione.hs  Contesto.hs  Controllo.hs  Core.hs  Costruzione.hs  Dichiarazioni.hs  Differenze.hs  File.hs  Inserimento.hs  Nodo.hs  Parsing.hs  Patch.hs  Persistenza.hs  Programmazione.hs  Programmzione.hs  Sessione.hs  StampaLogs.hs  Types.hs  UI.hs
Eventi/: Accredito.hs  Acquisto.hs  Amministrazione.hs  Anagrafe.hs  Impegno.hs  Logger.hs  Ordine.hs  Servizio.hs  Sincronizzatore.hs  Voci.hs
Lib/: .Firmabile.hs.swp  Aggiornamento.hs  Aspetti.hs  Assocs.hs  Console.hs  Costruzione.hs  Database.hs  Dimensions.hs  Error.hs  Euro.hs  Filesystem.hs  Firmabile.hs  HTTP.hs  Interazione.hs  Lib0.hs  Lib1.hs  LimitedTree.hs  Metrics.hs  Missing.hs  Modify.hs  NaturalLanguage.hs  Passo.hs  Prioriti.hs  QInteger.hs  Response.hs  SCGI.hs  STM.hs  ServerHTTP.hs  ServerHTTP2.hs  ShowRead.hs  Signal.hs  States.hs  Tokens.hs  TreeLogs.hs  UIVoci.hs  Units.hs  Valuedfiles.hs  Voci.hs
Lib/Interazione/: Haskeline.hs  HaskelineM.hs  HaskelineM2.hs  Passo.hs  PassoM.hs
Lib/Server/: CGI.hs  Core.hs  Server.hs  Session.hs
Pagine/: index.html
Server/: Layout.hs  Opzioni.hs  Service.hs  help.js  index.html  jquery.js  lighttpd.conf  portale.css  report.css  server.hs  style.css
Server/css/start/: jquery-ui-1.8.5.custom.css
Server/js/: jquery-ui-1.8.5.custom.min.js
Server/static/: accredito.html  boot.html  dichiarazioni.js  dichiarazioni.json  documenti.json  help.js  impegno.html  menu.html  menunav.html  myUsers.js  nginx.conf  portale.css  reactivegas.js  report.css  script.js  template.html
System/FilePath/: Glob.hs  GlobPattern.hs
UI/: Console.hs  Lib.hs  Server.hs
Voci/: Beni.hs  Boxes.hs  Compare.hs  Core.hi  Core.hs  Data.hs  Dynamics.hs  Esempi.hs  Instances.hi  Instances.hs  Instances2.hs  Language.hi  Language.hs  Names.hs  Ordine.hs  Ordini.hs  Quantita.hs  Quantità.hs  Serializzazione.hs  Valuta.hs
Voci/UI/: Commercio.hi  Commercio.hs  Ordini.hs  Voce.hs  Voci.hs
app/: Main.hs
docs/: intro.html
docs/en/: help.md  index.md  installation.md  usage.md
docs/it/: help.md  index.md  installation.md  usage.md
help/: amministrazione  effetto delle ultime dichiarazioni  gestione dichiarazioni  gruppo di acquisto  immetti una password, una frase , lunga almeno 12 caratteri  responsabile autore delle dichiarazioni
nix/: project.nix
