name:          reactivegas 
version:       2021.11.5
license:       BSD3
license-file:  LICENSE
maintainer:    Paolo Veronelli <paolo.veronelli@gmail.com> 
stability:     unstable
category:      social, p2p, cooperative
synopsis:      social tool for group of consumers
description:   ..
homepage:      http://wiki.github.com/paolino/reactivegas
copyright:     Copyright (c) 2010-2021 Paolo Veronelli 
build-type:    Simple
cabal-version: >=1.8

executable server
  main-is:       app/Main.hs
  ghc-options:   -Wall -XTypeOperators -O2 -threaded
  build-depends:
      array
    , base
    , bytestring
    , containers
    , directory
    , filemanip
    , filepath
    , haskeline
    , HDBC
    , HDBC-sqlite3
    , HTTP
    , MonadRandom
    , mtl
    , network
    , network-uri
    , old-time
    , pretty
    , random
    , reactivegas
    , RSA
    , crypto-api
    , SimpleAES
    , split
    , stm
    , time
    , transformers
    , url
    , utf8-string
    , xhtml

library
  ghc-options:   -Wall -XTypeOperators -O2 -threaded
  exposed-modules:
    Server.Service
  build-depends:
      array
    , base
    , bytestring
    , containers
    , directory
    , filemanip
    , filepath
    , haskeline
    , HDBC
    , HDBC-sqlite3
    , HTTP
    , MonadRandom
    , mtl
    , network
    , network-uri
    , old-time
    , pretty
    , random
    , RSA
    , crypto-api
    , SimpleAES
    , split
    , stm
    , time
    , transformers
    , url
    , utf8-string
    , xhtml

-- MaybeT      ,
